--- a/TODO
+++ b/TODO
@@ -1,2 +1,6 @@
-autorotate jpeg based on exif
+autorotate jpeg based on exif (jhead -auotrot)
 timeout workers?
+make possible to create gem with integrated binaries
+don't fail but warn on bins not present
+better documentation
+preserve time/attrs option?
