--- a/TODO
+++ b/TODO
@@ -4,3 +4,4 @@ make possible to create gem with integrated binaries
 don't fail but warn on bins not present, warn only when bin is going to be used
 better documentation
 preserve time/attrs option?
+jpegrescan
