--- a/TODO
+++ b/TODO
@@ -1,5 +1,9 @@
-leave_color branch
+preserve color (leave_color branch)
+preserve all extra stuff
+global level of optimization #10
 autorotate jpeg based on exif (jhead -auotrot)
 timeout workers?
+	based on file size?
 fail worker instead of process on bin not present?
 preserve time/attrs option?
+file based config
